# incident-triage-lakehouse

./: .env.example  .gitattributes  .gitignore  README.md  SETUP.md  deploy_notebooks.py  deploy_streamlit_snowflake.py  fetch_parent_keys.py  migrate_to_snowflake.py  pyproject.toml
apps/inference/: environment.yml  requirements.txt  similar_reference_utils.py  streamlit_in_snowflake.py
dbt_project/: dbt_project.yml  profiles.yml.example
dbt_project/macros/: consolidate_label.sql  generate_schema_name.sql
dbt_project/models/: sources.yml
dbt_project/models/marts/analytics/: _analytics_tests.yml  mart_analytics_calendar.sql  mart_analytics_links.sql  mart_analytics_ops.sql  mart_analytics_transitions_sankey.sql  mart_analytics_transitions_time.sql  mart_analytics_versions.sql  mart_analytics_workload.sql
dbt_project/models/marts/ml/: _ml_tests.yml  (+1 more)
dbt_project/models/staging/: _staging_tests.yml  stg_changelog.sql  stg_comments.sql  stg_issuelinks.sql  stg_issues.sql
dbt_project/seeds/: issuetype_mapping.csv  resolution_mapping.csv
docs/: architecture.md  data_dictionary.md  decisions_log.md
load/: 01_create_database.sql  02_create_stage.sql  03_put_files.py  04_copy_into_raw.sql  05_verify_counts.sql  inspect_headers.py  run_ml_pipeline.py  run_phase1.py  run_phase4.py  train_save_resolution_model.py  upload_predictions.py  write_profiles.py
results/: generate_eda_charts.py  generate_resolution_figures.py  spark_parent_keys.csv
results/notebooks/: deberta_fine_tuning_v3.ipynb  sklearn_resolution_training.ipynb
results/sklearn_models/: meta.json
